# pogema

./: .gitignore  setup.py
pogema/: __init__.py  a_star_policy.py  animation.py  envs.py  generator.py  grid.py  grid_config.py  grid_registry.py  pyproject.toml  run_sphinx.sh  utils.py
pogema/integrations/: make_pogema.py  pettingzoo.py  pymarl.py  sample_factory.py
pogema/wrappers/: metrics.py  persistence.py
tests/: test_deterministic_policy.py  test_grid.py  test_integrations.py  test_pogema_env.py
