[tool.poetry]
name = "pogema"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pydantic = "^2.3.0"
pytest = "^7.4.1"
pettingzoo = "^1.24.1"
tabulate = "^0.9.0"
gymnasium = "^0.29.1"
sphinx = "^7.2.5"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
